fix sitemape align and link more pages

--- a/homepage/style.css
+++ b/homepage/style.css
@@ -204,18 +204,16 @@
 /*------------------------------------------FOOTER------------------------------------------*/
 .sitemap-footer {
     position: relative;
-    top: 8vh;
+    top:8vh;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    padding: 20px;
+    padding: 20px 20px 10px 20px;
     background-color: #f2f2f2;
     margin-top: 30px;
     border-radius: 7px;
     border-top: 2px solid black;
-    flex-wrap: wrap; 
 }
-
 .logo-container-foot {
     margin-right: 20px;
 }
@@ -224,10 +222,15 @@
     flex: 1;
     margin-right: 20px;
 }
+.sitemap-section p{
+    display:flex;
+    justify-content: flex-end;
+}
 
 .sitemap-section h3 {
     font-size: 18px;
     color: #333;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .sitemap-section ul {
